[package]
name = "pp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.5.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dependencies]
time = "0.1.12"
regex = "0.1.41"
subprocess = "0.2.9"
libc = "0.2.150"
rand = "0.8.5"

